--- a/src/App.css
+++ b/src/App.css
@@ -273,6 +273,8 @@ h2 {
   border-radius: 10.6px;
   background: var(--bg-shade);
   min-height: 250px;
+  justify-content: space-between;
+  height: 86%; 
 }
 .skills--section--card:hover {
   border-bottom: 4px solid var(--primary);
@@ -289,6 +291,7 @@ h2 {
   border-radius: 10.6px;
   background: #fff;
   box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.1);
+  margin-top: auto; 
 }
 .skills--section--card--content {
   display: flex;
@@ -296,12 +299,20 @@ h2 {
   align-items: flex-start;
   gap: 32px;
   align-self: stretch;
+  flex-grow: 1;
 }
 .skills--section--title {
   color: var(--heading-color);
   font-size: 32px;
   font-weight: 700;
   line-height: 45px;
+}
+
+.skills--section--subtitle {
+  color: var(--heading-color);
+  font-size: 25px;
+  font-weight: 500;
+  line-height: 5px;
 }
 .skills--section--description {
   color: var(--black);
