--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 /* Global CSS */
 
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap');
+
 
 body {
   margin: 0;
@@ -142,6 +144,21 @@ h2 {
   display: flex;
   align-items: flex-start;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Poppins:wght@500&family=Protest+Strike&display=swap');
+
+.aboutme--section-description {
+  font-family: 'Montserrat', serif;
+  color: var(--darkblue); 
+  font-size: 36px; 
+  font-weight: 400; 
+  line-height: 1.5; 
+  max-width: 800px; 
+  margin: 0 auto;
+  text-align: left;
+  padding: 20px;  
+}
+
 /* Portfolio, Testimonial & Contact Me */
 .sub--title {
   color: var(--heading-color);
@@ -248,7 +265,6 @@ h2 {
   align-items: flex-start;
   gap: 106.667px;
   background: var(--bg-shade);
-
 }
 .skills--section--heading {
   color: var(--heading-color);
@@ -259,9 +275,11 @@ h2 {
 .skills--section--container {
   display: grid;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   gap: 42.6px;
   grid-template-columns: repeat(4, 1fr);
+
+  width:100%;
 }
 .skills--section--card {
   display: flex;
@@ -312,7 +330,7 @@ h2 {
   color: var(--heading-color);
   font-size: 25px;
   font-weight: 500;
-  line-height: 5px;
+  line-height: 0px;
 }
 .skills--section--description {
   color: var(--black);
@@ -894,3 +912,4 @@ input[type="checkbox"] {
   width: 100%; /* Makes the image fully occupy the frame */
   height: auto; /* Keeps the image aspect ratio */
 }
+
