--- a/src/App.css
+++ b/src/App.css
@@ -974,3 +974,55 @@ input[type="checkbox"] {
   height: auto; /* Keeps the image aspect ratio */
 }
 
+/* Styles for the ImageModal navigation buttons */
+.image-modal-button {
+  cursor: pointer;
+  background-color: var(--primary);
+  border: none;
+  color: white;
+  padding: 10px 15px;
+  font-size: 20px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 10px;
+}
+
+.image-modal-button:hover {
+  background-color: white; /* Darker shade of orange for hover effect */
+  color: var(--primary)
+}
+
+.image-modal-image {
+  transform: scale(1.5);
+  object-fit: contain;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+/* Ensures the navigation buttons are not too close to the edge of the screen */
+.image-modal-nav {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 20px; /* Adjust padding as needed */
+}
+
+/* Adjusts the modal overlay style */
+.image-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  z-index: 1000;
+}
