--- a/src/App.css
+++ b/src/App.css
@@ -970,7 +970,7 @@ input[type="checkbox"] {
 
 .image-frame img {
   display: block; /* Removes bottom space/margin under the image */
-  width: 100%; /* Makes the image fully occupy the frame */
+  width: 50%; /* Makes the image fully occupy the frame */
   height: auto; /* Keeps the image aspect ratio */
 }
 
@@ -995,10 +995,11 @@ input[type="checkbox"] {
 }
 
 .image-modal-image {
-  transform: scale(1.5);
-  object-fit: contain;
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 70%; /* Limits the image width to 80% of the modal's width */
+  max-height: 70vh; /* Limits the image height to 80% of the viewport height */
+  object-fit: contain; /* Ensures the whole image is visible, may add space around the image */
+  display: block; /* Ensures the image is a block-level element, centering it if necessary */
+  margin: auto; /* Centers the image horizontally and vertically */
 }
 
 /* Ensures the navigation buttons are not too close to the edge of the screen */
@@ -1026,3 +1027,12 @@ input[type="checkbox"] {
   cursor: pointer;
   z-index: 1000;
 }
+
+.portfolio--section--img > img {
+  width: 100%; /* Ensures the image takes the full width of its container */
+  height: 300px; /* Adjusts the height automatically to maintain the aspect ratio */
+  object-fit: cover; /* Covers the area of the container without stretching. Use 'contain' if you want to see the whole image without cropping */
+  border-top-left-radius: 12px; /* Matches the container's border-radius for the top corners */
+  border-top-right-radius: 12px;
+}
+
